make navigation fixed position on small devices

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -31,8 +31,9 @@ h6 {
 
 main {
   padding-bottom: 4em;
+  top: 100px;
+  position: absolute;
   @media (min-width: 768px) {
-    position: absolute;
     left: 250px;
     top: 0;
   }
