--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -6,10 +6,14 @@
   background-color: map-get($shades, 1);
   text-align: center;
   padding-bottom: 1.0625em;
-  position: relative;
+  // position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: 100px;
   overflow-y: hidden;
   transition: 1s height;
+  z-index: 100;
   @include flexy($disp: flex, $wrap: wrap, $just: space-evenly);
 }
 
@@ -23,7 +27,7 @@
     transition: none;
     display: block;
     text-align: left;
-    position: fixed;
+    // position: fixed;
     width: 250px;
     height: 100%;
   }
@@ -86,6 +90,7 @@
 }
 
 .sidebar__burger-btn {
+  cursor: pointer;
   color: $white;
   display: block;
   margin-top: .6em;
